--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,6 +7,26 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - /var/lib/postgresql/data/
+    env_file:
+      - ./.env
+  backend:
+    build:
+      context: ../backend/
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - "8000:8000"
+    volumes:
+      - static_value:/backend/foodgram/foodgram_static/
+      - media_value:/backend/foodgram/foodgram_media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +35,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/backend/static/
+      - media_value:/backend/media/
+    depends_on:
+      - frontend
+      - backend
+
+volumes:
+  static_value:
+  media_value:
