--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,9 @@ WORKDIR backend/
 
 COPY requirements.txt requirements.txt
 
-RUN pip3 install -r requirements.txt
+COPY data/ data/
+
+RUN pip3 install -U pip && pip3 install -r requirements.txt
 
 WORKDIR foodgram/
 
