--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,21 +2,17 @@ version: '3.3'
 services:
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: deorz/yandex_foodgram
     volumes:
       - ../frontend/:/app/result_build/
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      - postgres_value:/var/lib/postgresql/data/
     env_file:
       - ./.env
   backend:
-    build:
-      context: ../backend/
-      dockerfile: Dockerfile
+    image: deorz/yandex_foodgram
     restart: always
     ports:
       - "8000:8000"
@@ -44,3 +40,4 @@ services:
 volumes:
   static_value:
   media_value:
+  postgres_value:
