Поправил конфиг для flake8

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -1,4 +1,9 @@
 [flake8]
+ignore =
+    I001,
+    I004,
+    W503,
+    E126
 exclude =
     .git,
     .gitignore,
@@ -7,5 +12,8 @@ exclude =
     __pycache__,
     venv,
     .env
-    */migrations/
-    settings.py
+    */migrations/,
+    */apps.py
+per-file-ignores =
+    */settings.py:E501
+max-complexity = 10
