--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
 
   frontend:
-    image: deorz/yandex_foodgram
+    image: deorz/foodgram_front
     volumes:
       - ../frontend/:/app/result_build/
   db:
