--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -22,6 +22,6 @@ jobs:
 
       - name: test with flake8 and pytest
         run: |
-          python -m flake8
+          python -m flake8 --config=setup.cfg
           export SECRET_KEY=${{ secrets.SECRET_KEY }}
           pytest
